--- a/src/main/resources/templates/artistsList.html
+++ b/src/main/resources/templates/artistsList.html
@@ -16,7 +16,7 @@
 </header>
 <section>
     <h2>Select artist:</h2>
-    <form action="/artist" method="post">
+    <form th:action="@{/artist}" method="post">
         <th:block th:each="artist : ${artists}">
             <input type="radio" name="artistId" th:value="${artist.id}">
             <span th:text="${artist.firstName}"></span>
@@ -29,7 +29,7 @@
     <table>
         <tr>
             <td><b>Track Id</b></td>
-            <td th:text="${trackId}"></td>
+            <td th:text="${session.trackId.trackId}"></td>
         </tr>
     </table>
 </aside>
